force-app/main/default/objects/ARTL_Feasibility_Line_Item__c/ARTL_Feasibility_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Feasibility Line Item</label>
    <nameField>
        <label>Feasibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feasibility Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>