force-app/main/default/objects/ARTL_Feasibility_Line_Item__c/fields/ARTL_Feasibility__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Feasibility__c</fullName>
    <label>Feasibility</label>
    <referenceTo>ARTL_Feasibility__c</referenceTo>
    <relationshipLabel>Feasibility Line Items</relationshipLabel>
    <relationshipName>Feasibility_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>