force-app/main/default/objects/ARTL_Feasibility_Line_Item__c/fields/ARTL_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Type__c</fullName>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>