force-app/main/default/objects/ARTL_Feasibility_Line_Item__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent ID</label>
    <referenceTo>ARTL_Feasibility_Line_Item__c</referenceTo>
    <relationshipLabel>Feasibility Line Items</relationshipLabel>
    <relationshipName>Feasibility_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>